--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
   <body>
 
     <img src="img/photo.jpg" alt="Mars" class="photo">
+    <div>
+   <h1 class="aboutgame"> </h1>
+   <BUTTon class="gamebutton">game</BUTTon>
+    </div>
   </body>
 </html>
