--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
     <script src="script.js"> </script>
   </head>
   <body>
-
-    <img src="img/photo.jpg" alt="Mars" class="photo">
     <div>
-   <h1 class="aboutgame"> </h1>
-   <BUTTon class="gamebutton">game</BUTTon>
+      <img src="img/photo.jpg" alt="photo" class="photo">
     </div>
+    
+
+    <div>
+   
+   <!-- <BUTTon class="gamebutton">ame</BUTTon> -->
+   <a class="gamebutton" href="https://nikasms.github.io/-Phaser2ndGame/" target="_blank">Game</a>
+
+    </div>
+    <div> 
+      <a class="gitbutton" href="https://github.com/Nikasms/-Phaser2ndGame.git" target="_blank">GitHub</a>
+    </div>
+
+<div>
+  <a class="pollbutton" href="https://forms.gle/y6jnWNyfsxswRdfY7" target="_blank">Poll</a>
+</div>
   </body>
 </html>
