--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
 <div>
-  <a class="pollbutton" href="https://forms.gle/y6jnWNyfsxswRdfY7" target="_blank">Poll</a>
+  <a class="pollbutton" href="https://forms.gle/m4hsN4oAjyk5LwKA7" target="_blank">Poll</a>
 </div>
   </body>
 </html>
