--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div>
       <img src="img/photo.jpg" alt="photo" class="photo">
+      <h1 class="name">Nika Smolianova</h1>
     </div>
     
 
