--- a/market.html
+++ b/market.html
@@ -1,39 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,
-     initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width,
+     initial-scale=1.0"
+    />
     <title>Market</title>
-    <link rel="stylesheet" href="market.css">
-</head>
-<body>
-<content>
-    <div class="title"> Товари на які діє знижка</div>
-    <div class="items">
-        <div class="item">Мотокоса</div>
-        <div class="item">Тример</div>
-        <div class="item">Газонокосарка</div>
-        <div class="item">Оприскувач</div>
+    <link rel="stylesheet" href="market.css" />
+  </head>
+  <body>
+    <content>
+      <!-- блок заголовку -->
+      <div class="title">Товари, на які діє знижка</div>
+      <!-- блок товарів -->
+      <div class="items">
+        <!-- блок назва товару  -->
+        <div class="item-title">Мотокоса 43</div>
+        <!-- блок зображення товару  -->
+        <div class="item-image">
+          <img src="img/1.jpg" alt="Мотокоса 43" />
+        </div>
+        <!-- блок з оплатою частинами -->
+        <div class="parts-pay">
+          <div><img src="img/lapka.png" alt="" />6</div>
+          <div><img src="img/pb.jpg" alt="" />8</div>
+        </div>
+        <!-- блок ціни -->
+        <div class="price">
+          <div><span>5499</span> <sup>грн</sup></div>
+          <div><span>4497</span> <sup>грн</sup></div>
+        </div>
 
-    </div>
-    <div>
+        <!-- блок бонусної ціни  -->
+        <div class="price bonus">
+          <div>ціна за купоном</div>
+          <div><span>4395</span> <sup>грн</sup></div>
+        </div>
+      </div>
+      <div class="item">Тример</div>
+      <div class="item">Газонокосарка</div>
+      <div class="item">Оприскувач</div>
+      </div>
+
+      <!-- блок контактів -->
+      <div class="contacts">
         <p>ЖИТОМИР</p>
-       <p>вул. Київська, 106</p>
-       <p>| +38 (067) 414-53-30*</p>
-    </div>
-    <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-         Aspernatur optio perspiciatis, officiis perferendis soluta deleniti officia, 
-         fugit similique est magnam dolores saepe! Praesentium sequi 
-         nobis illo cupiditate, voluptate at repellat?
-         Lorem ipsum dolor sit amet consectetur adipisicing 
-         elit. Iusto perspiciatis dolorem corporis quaerat ad
-          enim soluta quos numquam, tempora, cumque molestias 
-          nostrum aliquid tenetur dicta animi porro, incidunt 
-          iste optio!
-    </div>
-</content>
-    
-</body>
+        <p>вул. Київська, 106</p>
+        <p>| +38 (067) 414-53-30*</p>
+      </div>
+      <!-- блок інформації -->
+      <div class="info">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
+        optio perspiciatis, officiis perferendis soluta deleniti officia, fugit
+        similique est magnam dolores saepe! Praesentium sequi nobis illo
+        cupiditate, voluptate at repellat? Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Iusto perspiciatis dolorem corporis
+        quaerat ad enim soluta quos numquam, tempora, cumque molestias nostrum
+        aliquid tenetur dicta animi porro, incidunt iste optio!
+      </div>
+    </content>
+  </body>
 </html>
