--- a/market.html
+++ b/market.html
@@ -16,11 +16,12 @@
       <div class="title">Товари, на які діє знижка</div>
       <!-- блок товарів -->
       <div class="items">
+        <div class="item"> 
         <!-- блок назва товару  -->
         <div class="item-title">Мотокоса 43</div>
         <!-- блок зображення товару  -->
         <div class="item-image">
-          <img src="img/1.jpg" alt="Мотокоса 43" />
+          <img src="img/8_2.600×800.jpg" alt="Мотокоса 43" />
         </div>
         <!-- блок з оплатою частинами -->
         <div class="parts-pay">
