changed the photo

--- a/market.html
+++ b/market.html
@@ -21,7 +21,7 @@
         <div class="item-title">Мотокоса 43</div>
         <!-- блок зображення товару  -->
         <div class="item-image">
-          <img src="img/8_2.600×800.jpg" alt="Мотокоса 43" />
+          <img src="img/main.jpg" alt="Мотокоса 43" />
         </div>
         <!-- блок з оплатою частинами -->
         <div class="parts-pay">
