--- a/market.html
+++ b/market.html
@@ -14,36 +14,13 @@
     <content>
       <!-- блок заголовку -->
       <div class="title">Товари, на які діє знижка</div>
-      <!-- блок товарів -->
-      <div class="items">
-        <div class="item"> 
-        <!-- блок назва товару  -->
-        <div class="item-title">Мотокоса 43</div>
-        <!-- блок зображення товару  -->
-        <div class="item-image">
-          <img src="img/.jpg" alt="Мотокоса 43" />
-        </div>
-        <!-- блок з оплатою частинами -->
-        <div class="parts-pay">
-          <div><img src="img/lapka.png" alt="" />6</div>
-          <div><img src="img/pb.jpg" alt="" />8</div>
-        </div>
-        <!-- блок ціни -->
-        <div class="price">
-          <div><span>5499</span> <sup>грн</sup></div>
-          <div><span>4497</span> <sup>грн</sup></div>
-        </div>
 
-        <!-- блок бонусної ціни  -->
-        <div class="price bonus">
-          <div>ціна за купоном</div>
-          <div><span>4395</span> <sup>грн</sup></div>
-        </div>
+
+      <!-- блок товарів -->
+      <div id="items" class="items">
+        
       </div>
-      <div class="item">Тример</div>
-      <div class="item">Газонокосарка</div>
-      <div class="item">Оприскувач</div>
-      </div>
+
 
       <!-- блок контактів -->
       <div class="contacts">
@@ -62,5 +39,8 @@
         aliquid tenetur dicta animi porro, incidunt iste optio!
       </div>
     </content>
+    
+    <!-- підключення файлу скриптів -->
+    <script> scr="market.js"</script>
   </body>
 </html>
