--- a/market.html
+++ b/market.html
@@ -39,8 +39,8 @@
         aliquid tenetur dicta animi porro, incidunt iste optio!
       </div>
     </content>
-    
+
     <!-- підключення файлу скриптів -->
-    <script> scr="market.js"</script>
+    <script src="script.js"></script>
   </body>
 </html>
