--- a/market.html
+++ b/market.html
@@ -41,6 +41,6 @@
     </content>
 
     <!-- підключення файлу скриптів -->
-    <script src="script.js"></script>
+    <script src="market.css"></script>
   </body>
 </html>
