--- a/market.html
+++ b/market.html
@@ -5,8 +5,7 @@
     <meta
       name="viewport"
       content="width=device-width,
-     initial-scale=1.0"
-    />
+     initial-scale=1.0"/>
     <title>Market</title>
     <link rel="stylesheet" href="market.css" />
   </head>
