--- a/final/final.html
+++ b/final/final.html
@@ -12,7 +12,7 @@
   <body>
     <content>
       <!-- блок заголовку -->
-      <div class="title">Товари, на які діє знижка</div>
+      <div class="title">Проекти</div>
 
 
       <!-- блок товарів -->
